--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.41.1
 pandas==2.2.3
-openpyxl==3.1.5
 plotly==5.24.1
-streamlit-aggrid==1.0.5
+openpyxl==3.1.5
+xlsxwriter==3.2.0
+numpy==1.26.4
